// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lingui/babel-plugin-transform-js formats format must be either string, variable or object with custom format 1`] = `
undefined: Format can be either string for buil-in formats, variable or object for custom defined formats.
> 1 | i18n.number(value, 42);
    |                    ^
`;

exports[`@lingui/babel-plugin-transform-js formats value is missing 1`] = `
undefined: The first argument of format function must be a variable.
> 1 | i18n.date();
    | ^
`;

exports[`@lingui/babel-plugin-transform-js validation plural/select/selectordinal offset must be number or string, not variable 1`] = `
undefined: Offset argument cannot be a variable.
  1 | 
> 2 |         i18n.plural({
    |         ^
  3 |           offset: count,
  4 |           0: "No books",
  5 |           1: "1 book",
`;

exports[`@lingui/babel-plugin-transform-js validation plural/select/selectordinal plural forms are missing 1`] = `
undefined: Missing plural choices. At least fallback argument 'other' is required.
  1 | 
> 2 |         i18n.plural({
    |         ^
  3 |           value: count
  4 |         });
`;

exports[`@lingui/babel-plugin-transform-js validation plural/select/selectordinal plural forms are missing 2`] = `
undefined: Missing plural choices. At least fallback argument 'other' is required.
  1 | 
> 2 |         i18n.plural({
    |         ^
  3 |           value: count
  4 |         });
`;

exports[`@lingui/babel-plugin-transform-js validation plural/select/selectordinal plural forms are missing 3`] = `
undefined: Missing plural choices. At least fallback argument 'other' is required.
  1 | 
> 2 |         i18n.plural({
    |         ^
  3 |           value: count
  4 |         });
`;

exports[`@lingui/babel-plugin-transform-js validation plural/select/selectordinal plural forms cannot be variables 1`] = `
undefined: Computed properties aren't allowed.
  2 |         i18n.plural({
  3 |           value: count,
> 4 |           [one]: "Book"
    |           ^
  5 |         });
`;

exports[`@lingui/babel-plugin-transform-js validation plural/select/selectordinal plural forms missing fallback 1`] = `
undefined: Missing fallback argument 'other'.
  1 | 
> 2 |         i18n.plural({
    |         ^
  3 |           value: count,
  4 |           one: "Book"
  5 |         });
`;

exports[`@lingui/babel-plugin-transform-js validation plural/select/selectordinal plural forms missing fallback 2`] = `
undefined: Missing fallback argument 'other'.
  1 | 
> 2 |         i18n.select({
    |         ^
  3 |           value: count,
  4 |           male: "He"
  5 |         });
`;

exports[`@lingui/babel-plugin-transform-js validation plural/select/selectordinal plural forms missing fallback 3`] = `
undefined: Missing fallback argument 'other'.
  1 | 
> 2 |         i18n.selectOrdinal({
    |         ^
  3 |           value: count,
  4 |           one: "st"
  5 |         });
`;

exports[`@lingui/babel-plugin-transform-js validation plural/select/selectordinal plural rules must be valid 1`] = `
undefined: Invalid plural rule 'three'. Must be zero, one, two, few, many, other or exact number depending on your source language ('one' and 'other' for English).
  1 | 
> 2 |         i18n.plural({
    |         ^
  3 |           value: count,
  4 |           one: "Book",
  5 |           three: "Invalid",
`;

exports[`@lingui/babel-plugin-transform-js validation plural/select/selectordinal plural rules must be valid 2`] = `
undefined: Invalid plural rule 'three'. Must be zero, one, two, few, many, other or exact number depending on your source language ('one' and 'other' for English).
  1 | 
> 2 |         i18n.selectOrdinal({
    |         ^
  3 |           value: count,
  4 |           one: "st",
  5 |           three: "Invalid",
`;

exports[`@lingui/babel-plugin-transform-js validation plural/select/selectordinal value is missing 1`] = `
undefined: Value argument is missing.
  1 | 
> 2 |         i18n.plural({
    |         ^
  3 |           0: "No books",
  4 |           1: "1 book",
  5 |           other: "# books"
`;
